<resources>
    <string name="app_name">ALIA</string>
    <string name="title_busStation">Parada de autobus</string>
    <string name="txt_saludo_busStation">Buenos días, Usuario</string>
    <string name="editText_busStation">¿A dónde vas?</string>
    <string name="ruta1_busStation">Línea 5 calle Zaragoza 611</string>
    <string name="ruta2_busStation">Central camionera calle Hidalgo 200</string>
    <string name="ruta3_busStation">Línea 8 calle Guerrero 1030</string>
    <string name="txt_viaje">Carolina está en camino...</string>

    <string-array name="majors_array">
        <item>Carrera que estudia</item>
        <item>Lic. Administración</item>
        <item>Lic. Administración Empresas</item>
        <item>Lic. Arquitectura</item>
        <item>Lic. Ciencias de la Educación</item>
        <item>Lic. en Ciencias del Ejercicio Físico</item>
        <item>Lic. en Contaduría Pública</item>
        <item>Lic. en Diseño Gráfico</item>
        <item>Lic. en Economía y Finanzas</item>
        <item>Lic. en Educación Infantil</item>
        <item>Lic. en Gestión y Desarrollo de las Artes</item>
        <item>Lic. en Psicología</item>
        <item>Lic. en Tecnología de Alimentos</item>
        <item>Médico Veterinario Zootecnista</item>
        <item>Ing. en Biosistemas</item>
        <item>Ing. en Biotecnología</item>
        <item>Ing. en Ciencias Ambientales</item>
        <item>Ing. Civil</item>
        <item>Ing. Electromecánica</item>
        <item>Ing. Industrial y de Sistemas</item>
        <item>Ing. en Manufactura</item>
        <item>Ing. en Mecatrónica</item>
        <item>Ing. Química</item>
        <item>Ing. en Software</item>
    </string-array>

    <string-array name="bus_array">
        <item>Linea que utiliza</item>
        <item>Linea 1</item>
        <item>Linea 2</item>
        <item>Linea 3</item>
        <item>Linea 4</item>
        <item>Linea 5</item>
        <item>Linea 6</item>
        <item>Linea 7</item>
        <item>Linea 8</item>
        <item>Linea 9</item>
        <item>Linea 10</item>
        <item>Linea 11</item>
        <item>Linea 13</item>
        <item>Linea 14</item>
        <item>Linea 15</item>
        <item>Linea 15</item>
    </string-array>
    <string-array name="colonia_array">
        <item>Colonia destino</item>
        <item>México</item>
        <item>Libertad</item>
        <item>La Machi</item>
        <item>Plan Oriente</item>
        <item>Centro</item>
        <item>Faustino Félix</item>
        <item>Mira Valle</item>
        <item>Valle Dorado</item>
        <item>Villa Fontana</item>
        <item>Aves del Castillo</item>
        <item>Casa Blanca</item>
        <item>Urbi Villa</item>
        <item>Bella Vista</item>
        <item>La Sochiloa</item>
    </string-array>
</resources>
